# riichi-mahjong-recognition

./: .dockerignore  .gitignore  AGENT.md  AGENT_RESULT.md  AGENT_RESULT_STAGE2.md  AGENT_RESULT_STAGE3.md  AGENT_RESULT_STAGE4.md  Dockerfile  HANDOVER.md  README.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  requirements-train.txt  requirements.txt  task_plan.md
data/derived/: risk_labels.sample.jsonl
docs/: MAJSOUL_PARSER.md
scripts/: augment_dataset.py  batch_test.py  fetch_majsoul_records.py  fetch_multi_player_records.py  generate_risk_labels.py  majsoul_parser.py  majsoul_strict_validator.py  merge_datasets.py  merge_final_dataset.py  mjai_parser.py  mjai_parser_v2.py  prepare_dataset.py  prepare_merged_dataset.py  train_yolo.py
src/: __init__.py  cli.py  system.py
src/agent/: __init__.py  validator.py
src/context/: __init__.py  physical_behavior.py  public_state.py  risk_features.py  round_context.py  verification_input.py
src/efficiency/: __init__.py  analyzer.py  shanten.py  ukeire.py
src/game_logic/: __init__.py  hand.py  tile.py
src/game_logic/scoring/: __init__.py  fu.py  score.py  yaku.py
src/gui/: __init__.py  __main__.py  camera_panel.py  hand_panel.py  main_window.py  result_panel.py  widgets.py
src/majsoul/: __init__.py  meld_normalization.py
src/opponent/: __init__.py  belief.py  estimator.py
src/recognition/: __init__.py  classifier.py  detector.py  recognizer.py
src/risk/: __init__.py  label_generator.py  rules.py  truth_labels.py
src/utils/: __init__.py  image_utils.py  mahjong_utils.py
tests/: test_boundary.py  test_context_models.py  test_cross_validation.py  test_gui.py  test_majsoul_meld_normalization.py  test_majsoul_strict_diff_report.py  test_majsoul_strict_validator.py  test_majsoul_trusted_reader.py  test_mjai_parser_v2.py  test_opponent_belief.py  test_opponent_estimator.py  test_physical_behavior_context.py  test_risk_features.py  test_risk_truth_labels.py  test_scoring.py  test_system.py  test_validator.py  test_yaku.py
