[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "riichi-mahjong-recognition"
version = "0.1.0"
description = "日本立直麻将识别系统 - 基于计算机视觉的真实麻将牌识别"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
requires-python = ">=3.8"
keywords = ["mahjong", "riichi", "computer-vision", "yolo", "recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "ultralytics>=8.0.0",
    "pandas>=1.3.0",
    "Pillow>=8.0.0",
    "pyyaml>=5.4.0",
    "loguru>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "types-PyYAML>=5.4.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/riichi-mahjong-recognition"
Documentation = "https://github.com/yourusername/riichi-mahjong-recognition#readme"
Repository = "https://github.com/yourusername/riichi-mahjong-recognition"
Issues = "https://github.com/yourusername/riichi-mahjong-recognition/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["numpy", "opencv", "torch", "ultralytics"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]